<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">luqinwenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="logintitle">用户名：</string>
    <string name="passwordtitle">　密码：</string>
    <string name="loginhint">请输入用户名</string>
    <string name="passwordhint">请输入密码</string>
    <string name="btnlogin">登录</string>
    <string name="btnregist">注册</string>
    <string name="dataloading">数据加载中...</string>
    <string name="submitText">确定</string>
    <string name="cancelText">取消</string>
    
    <string name="dialogbg">#ccc</string>
    <string name="regloginhint">请输入邮箱或手机号</string>
    <string name="repasswordtitle">重复密码：</string>
    <string name="repasswordhint">请再次输入密码</string>
    <string name="avatardescription">头像</string>
    <string name="avatartitle">设置头像</string>
    <string name="sextitle">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unametitle">昵称</string>
    <string name="unamehint">请输入昵称</string>

</resources>